      optional --maxsize argument and truncates changemail messages
      to fit. (CNY-3205)
    * The Run build action now does path-based build requirement
      discovery like most build actions. (CNY-3222)
    * Allow identical files to be shared during installs and updates. Both
      troves own the shared files, and they must be updated at the same time
      when the shared files change.

  o Internal Changes:
    * Repository internal getfile function now avoids and database access
      when no files have been requested
    * Use bulk operatings for loading troveinfo data, speeding up repository
      commits.
    * Committing changesets now iterates over troves the changeset is
      relative to rather than getting them one at a time, significantly
      reducing the number of sql calls.
    * Conary now uses a single call when validating that file objects exist
      in the repository during a commit.
    * Repository commits now handle file paths and file streams separately
      to reduce the size of the temporary tables and the commit path.
    * The number of SQL calls used to create the flavors needed by a repository
      commit has been dramatically reduced.
    * Avoid noop SQL calls during repository commits when no redirects are
      being commited.
    * Repository commits now merge all dependencies from the temporary tables
      into the final tables at once rather than once per trove.
    * Repository commits now updates permission tables for all new troves
      at once.
    * Updates to latest tables are now done for all troves at once, and
      are based on the current latest entries and the new trove. Formerly
      they were done one at a time based on everything in the repository
      (through a view).
    * The rpmhelper.Header object can now produce dependency sets that
      represent what an RPM requires and provides.
    * A new RPM dependency class has been added. This class is used