@@ -215,6 +215,18 @@ class CfgLabel(CfgType):
         except versions.ParseError, e:
             raise ParseError, e
 
+class CfgDependencyClass(CfgType):
+
+    def format(self, val, displayOptions=None):
+        return val.tagName
+
+    def parseString(self, val):
+        klass = deps.dependencyClassesByName.get(val, None)
+        if klass is None:
+            raise ParseError('unknown dependency class: %s' % val)
+
+        return klass
+
 class CfgRepoMapEntry(CfgType):
 
     def parseString(self, str):
@@ -459,6 +471,7 @@ class CfgProxy(CfgDict):
         CfgDict.__init__(self, ProxyEntry, default=default)
 
 CfgInstallLabelPath = CfgLineList(CfgLabel, listType = CfgLabelList)
+CfgDependencyClassList = CfgLineList(CfgDependencyClass)
 
 
 class CfgSearchPathItem(CfgType):
@@ -527,6 +540,8 @@ class ConaryContext(ConfigSection):
     fullFlavors           =  CfgBool
     localRollbacks        =  CfgBool
     keepRequired          =  CfgBool
+    ignoreDependencies    =  (CfgDependencyClassList,
+                              [ deps.AbiDependency, deps.RpmLibDependencies])
     installLabelPath      =  CfgInstallLabelPath
     interactive           =  (CfgBool, False)
     logFile               =  (CfgPathList, ('/var/log/conary',
