@@ -22,6 +22,12 @@ Changes in @NEW@:
     * Allow identical files to be shared during installs and updates. Both
       troves own the shared files, and they must be updated at the same time
       when the shared files change.
+    * Conary now allows packages to be installed using foreign package managers
+      via wrapped content called capsules. RPM capsule support is included
+      in this release.
+    * Added ignoreDependencies configuration option which allows the user
+      to specify certain dependency classes which should be ignored during
+      installs. The defaults is "abi rpmlib".
 
   o Internal Changes:
     * Repository internal getfile function now avoids and database access
